docs/stylesheets/extra.css
/* ... */
.copy ul li a {
	color: #333333;
	text-decoration: none;
}

/* Responsive Options */

@media screen and (min-width: 768px) {
	.modal{
		width: 1200px;
        margin: 0px 0px 0px -600px;
		top: -10%;
	}
}

/* Responsive Video */

.video iframe,
.video object,
.video embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
/* Close Button */
.box3 {
	width: 25px;
	right: 0px;
	position: absolute;
	margin: 5px;
}
svg {
	display: block;
}
.close-x {
  stroke: black;
  fill: transparent;
  stroke-linecap: round;
  stroke-width: 5;
}

/**
 * Flip Cards
 */

 .flip-card-container {
    cursor: pointer;
    height: 150px;
    perspective: 600;
    position: relative;
  }
  .flip-card-container img{
    width: 72px;
    height: 150px;
  }
  .flip-card {
    height: 100%;
    position: absolute;
    transform-style: preserve-3d;
    transition: all .77s ease-in-out;
    width: 100%;
    text-align: center;
  }
  .flip-card:hover {
    transform: rotateY(180deg);
  }
  .flip-card .side {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    border-radius: 6px;
    height: 100%;
    position: absolute;
    overflow: hidden;
    width: 100%;
  }
  .flip-card .back {
    color: #000;
    background: #fff;
    text-align: center;
    transform: rotateY(180deg);
    font-size: 1rem;
    padding: 4px;
  }
  .flip-card .back h5 {
    font-weight: bold;
    font-size: 1.2rem;
    margin: .4rem 0
  }
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (-webkit-min-device-pixel-ratio: 2) {
.flip-card:hover {
    transform: none;
}
}
@media only screen
and (min-device-width : 375px)
and (max-device-width : 812px)
and (-webkit-device-pixel-ratio : 3) {
.flip-card .back {
    display: none;
}
}
 /**
 * Gif Player
 */

  .player-container {
    display: table;
    background-color: #00a1ed;
    border: 1px solid black;
  }
  .player-container #playing {
    display: none;
  }
  .player-container .gif {
    visibility: hidden;
  }
  .player-container #playing:checked ~ .gif {
    visibility: visible;
  }
  .player-container #playing:checked ~ .btn-play {
    display: none;
  }
  .player-container #playing:checked ~ .btn-stop {
    display: block;
  }
  .player-btn {
    display: block;
    width: 100%;
    padding: 1rem 1.6rem;
    border-top: 1px solid white;
    font-family: Arial, sans-serif;
    color: white;
    cursor: pointer;
    font-size: 3rem;
  }
  .player-btn:hover {
    background-color: #444;
  }
  .player-btn.btn-stop {
    display: none;
  }
  .player-btn.btn-stop .icon-stop {
    font-size: 135%;
    line-height: 1px;
  }

  /**
 * Responsive Table
 */

  .table-responsive {
    min-height: .01%;
    overflow-x: auto;
}
@media screen and (max-width: 767px) {
    .table-responsive {
        width: 100%;
        margin-bottom: 15px;
        overflow-y: hidden;
        -ms-overflow-style: -ms-autohiding-scrollbar;
        border: 1px solid #ddd;
    }
    .table-responsive > .table {
        margin-bottom: 0;
    }
    .table-responsive > .table > thead > tr > th,
    .table-responsive > .table > tbody > tr > th,
    .table-responsive > .table > tfoot > tr > th,
    .table-responsive > .table > thead > tr > td,
    .table-responsive > .table > tbody > tr > td,
    .table-responsive > .table > tfoot > tr > td {
        white-space: nowrap;
    }
    .table-responsive > .table-bordered {
        border: 0;
    }
    .table-responsive > .table-bordered > thead > tr > th:first-child,
    .table-responsive > .table-bordered > tbody > tr > th:first-child,
    .table-responsive > .table-bordered > tfoot > tr > th:first-child,
    .table-responsive > .table-bordered > thead > tr > td:first-child,
    .table-responsive > .table-bordered > tbody > tr > td:first-child,
    .table-responsive > .table-bordered > tfoot > tr > td:first-child {
        border-left: 0;
    }
    .table-responsive > .table-bordered > thead > tr > th:last-child,
    .table-responsive > .table-bordered > tbody > tr > th:last-child,
    .table-responsive > .table-bordered > tfoot > tr > th:last-child,
    .table-responsive > .table-bordered > thead > tr > td:last-child,
    .table-responsive > .table-bordered > tbody > tr > td:last-child,
    .table-responsive > .table-bordered > tfoot > tr > td:last-child {
        border-right: 0;
    }
    .table-responsive > .table-bordered > tbody > tr:last-child > th,
    .table-responsive > .table-bordered > tfoot > tr:last-child > th,
    .table-responsive > .table-bordered > tbody > tr:last-child > td,
    .table-responsive > .table-bordered > tfoot > tr:last-child > td {
        border-bottom: 0;
    }
}

/**
 * Custom Styles
 */

 body{
    font-family: Inter UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
 }
a {
    color: #00A3EF;
}
pre {
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
    padding: 1.05rem 1.2rem;
 }

@media (min-width: 840px){
.mdl-grid.integrations {
    padding: 1px;
}
}
.md-nav--primary .md-nav__title {
    display: none;
}
.md-content {
    padding: 1.5rem;
}
.md-sidebar a {
    color: rgba(0,0,0,.87);
}
.md-nav__link:focus, .md-nav__link:hover {
    color: #00A3EF;
}
.mdl-button {
    font-weight: 600;
    text-transform: uppercase;
}
@media only screen and (max-width : 640px) {
 .md-header-nav__free_account.btn.btn-warning {
    display: none;
}
}
.md-nav--secondary .md-nav__item {
    padding: 0;
}
.md-nav--secondary .md-nav__title{
    padding-left: 0;
}
.md-nav__link--active, .md-nav__link:active {
    font-weight: bold;
}
.md-nav__link[data-md-state=blur] {
    color: rgba(0,0,0,.33);
}
.md-typeset a {
    color: #00a1ed;
}
.md-typeset a:hover {
    color: #00425D;
}
.md-typeset h4 {
  font-weight: 500;
}
.md-header {
    background-color: #011a27;
    color: #fff;
}
.md-content__inner {
    /* margin: 0 0 480px; */
}
/* ... */

